--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+[B]2.2.2[/B]
+Removed all sorting.  For Reals
+Can be enabled by uncommenting the sorting in crunchy_main.py
 [B]2.2.1[/B]
 Pulled Fix for Queue in Episode view (thanks rpowellgit)
 Added Trakt.tv info (from ineffablebob)
