--- a/resources/language/German/strings.po
+++ b/resources/language/German/strings.po
@@ -206,3 +206,11 @@ msgstr "Aktiviere Video sortierung"
 msgctxt "#30507"
 msgid "Progress & Watch State"
 msgstr "Fortschritt & Gesehen Status"
+
+msgctxt "#30508"
+msgid "General"
+msgstr "Allgemein"
+
+msgctxt "#30509"
+msgid "Behaviour"
+msgstr "Verhalten"
