Allows user to set prefixes for "Premium Content" and "Coming Soon" Adds language id 30510 and 30511 for those items in English/strings.po

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -214,3 +214,11 @@ msgstr ""
 msgctxt "#30509"
 msgid "Behaviour"
 msgstr ""
+
+msgctxt "#30510"
+msgid "Prefix 'Premium Content' as..."
+msgstr ""
+
+msgctxt "#30511"
+msgid "Prefix \'Coming Soon\' as..."
+msgstr ""
