added proxy support in light of new update on crunchyroll

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -274,3 +274,10 @@ msgctxt "#30604"
 msgid "Off"
 msgstr ""
 
+msgctxt "#30701"
+msgid "HTTP Proxy"
+msgstr ""
+
+msgctxt "#30702"
+msgid "HTTPS Proxy"
+msgstr ""
